crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_evaluate__espresso_pump.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "element_id": "<UUID>"
  },
  "response": "2"
}
